--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -38,3 +38,25 @@
 - name: Start the ntp service
   service: name=ntpd state=started enabled=yes
   tags: ntp
+
+- name: java | Download
+  command: "wget -q -O  /opt/jdk-8-linux-x64.rpm --no-check-certificate --no-cookies --header 'Cookie: oraclelicense=accept-securebackup-cookie' http://download.oracle.com/otn-pub/java/jdk/8u111-b14/jdk-8u111-linux-x64.rpm creates=/opt/jdk-8-linux-x64.rpm"
+
+- name: Java  | install rpm
+  yum: name=/opt/jdk-8-linux-x64.rpm state=present
+
+- name: java | alternative
+  template: src=alternatives.sh.j2 dest=/opt/alternatives.sh 
+
+- name: Java | alternative script run
+  command: /usr/bin/bash /opt/alternatives.sh
+
+- name: Java | Adding the path in the Profile files
+  lineinfile: dest=/home/centos/.bash_profile line='export JAVA_CMD=/usr/bin/java' insertafter='EOF' regexp='export JAVA_CMD=/usr/bin/java' state=present
+
+- name: Java | Adding the path in the Profile files
+  lineinfile: dest=/root/.bash_profile line='export JAVA_CMD=/usr/bin/java' insertafter='EOF' regexp='export JAVA_CMD=/usr/bin/java' state=present
+
+- name: Java  | Source the bash_profile file
+  shell: source /home/centos/.bash_profile
+
