--- a/jenkins.yml
+++ b/jenkins.yml
@@ -7,7 +7,7 @@
 
   roles:
     - common
-
+    - jenkins
 #- name: configure and deploy the webservers and application code
 #  hosts: webservers
 #  remote_user: root
